--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ PyYAML = "^5.3.1"
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
 
+[tool.poetry.scripts]
+sementara = "sementara.main:main"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
