--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Install AWS
         run: |
-          curl "https://awscli.amazonaws.com/AWSCLIV2.pkg" -o "AWSCLIV2.pkg",
+          curl https://awscli.amazonaws.com/AWSCLIV2.pkg -o AWSCLIV2.pkg
           sudo installer -pkg AWSCLIV2.pkg -target /
 
       - name: Test AWS
