--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,19 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Install AWS
-        run: |
-          curl https://awscli.amazonaws.com/AWSCLIV2.pkg -o AWSCLIV2.pkg
-          sudo installer -pkg AWSCLIV2.pkg -target /
+      # - name: Install AWS
+      #   run: |
+      #     curl https://awscli.amazonaws.com/AWSCLIV2.pkg -o AWSCLIV2.pkg
+      #     sudo installer -pkg AWSCLIV2.pkg -target /
 
-      - name: Test AWS
-        run: aws --version
+      # - name: Test AWS
+      #   run: aws --version
+
+      - name: Set up Python 3.6
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      # version 1.2
+      - name: Install Poetry
+        uses: dschep/install-poetry-action@db2e37f48d1b1cd1491c4590338ebc7699adb425
