--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,7 @@ jobs:
       # version 1.2
       - name: Install Poetry
         uses: dschep/install-poetry-action@db2e37f48d1b1cd1491c4590338ebc7699adb425
+      
+
+      - name: Install Dependencies
+        run: poetry install
