--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.6"
 boto3 = "^1.14.20"
 cryptography = "^2.9.2"
 PyYAML = "^5.3.1"
+records = "^0.5.3"
+keyring = "^21.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
