--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "sementara"
+name = "mentaws"
 version = "0.4.3"
 description = "Temporary AWS credentials"
 authors = ["keithrozario <keith@keithrozario.com>"]
@@ -16,7 +16,8 @@ pytest = "^4.6"
 black = "^20.8b1"
 
 [tool.poetry.scripts]
-sementara = "sementara.main:main"
+mentaws = "mentaws.main:main"
+mts = "mentaws.main:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
