--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,14 +18,22 @@ jobs:
       # - name: Test AWS
       #   run: aws --version
 
-      - name: Set up Python 3.6
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
+      # - name: Set up Python 3.6
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.8
 
-      # version 1.2
-      - name: Install Poetry
-        uses: dschep/install-poetry-action@db2e37f48d1b1cd1491c4590338ebc7699adb425
+      # # version 1.2
+      # - name: Install Poetry
+      #   uses: dschep/install-poetry-action@db2e37f48d1b1cd1491c4590338ebc7699adb425
 
-      - name: Install Dependencies
-        run: poetry install
+      # - name: Install Dependencies
+      #   run: poetry install
+      
+      - name: Configure AWS
+        env:
+          CREDENTIALS_FILE_CONTENTS : ${{ secrets.AWS_CREDENTIALS_FILE_CONTENTS }}
+        run: |
+          mkdir ~/.aws
+          echo "$CREDENTIALS_FILE_CONTENTS" > ~/.aws/credentials
+
