--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,20 @@ jobs:
   test:
     runs-on: macos-latest
     steps:
+
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.6
+      - uses: Gr1N/setup-poetry@v4
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+      - run: poetry install
+      - run: poetry --version
 
       # # Runs a single command using the runners shell
       # - name: Install AWS
@@ -27,14 +40,14 @@ jobs:
           echo "$CREDENTIALS_FILE_CONTENTS" > ~/.aws/credentials.copy
         # Copy file above is for testing purposes, refer to tests/mentaws::test_add_profiles
       
-      - name: Set up Python 3.6
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.6
+      # - name: Set up Python 3.6
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.6
 
-      # version 1.2
-      - name: Install Poetry
-        uses: dschep/install-poetry-action@db2e37f48d1b1cd1491c4590338ebc7699adb425
+      # # version 1.2
+      # - name: Install Poetry
+      #   uses: dschep/install-poetry-action@db2e37f48d1b1cd1491c4590338ebc7699adb425
 
       - name: Install Dependencies
         run: poetry install
