--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,13 +13,13 @@ jobs:
         with:
           python-version: 3.6
       - uses: Gr1N/setup-poetry@v4
+      - run: poetry install
       - uses: actions/cache@v1
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
           restore-keys: |
             ${{ runner.os }}-poetry-
-      - run: poetry install
       - run: poetry --version
 
       # # Runs a single command using the runners shell
@@ -49,8 +49,8 @@ jobs:
       # - name: Install Poetry
       #   uses: dschep/install-poetry-action@db2e37f48d1b1cd1491c4590338ebc7699adb425
 
-      - name: Install Dependencies
-        run: poetry install
+      # - name: Install Dependencies
+      #   run: poetry install
       
       - name: Get Path
         run: poetry env info --path
