--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,12 +6,16 @@ on:
 jobs:
   test:
     runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+    
     steps:
 
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
-          python-version: 3.6
+          python-version: ${{ matrix.python-version }}
       - uses: Gr1N/setup-poetry@v4
       - run: poetry install
       - uses: actions/cache@v1
@@ -28,7 +32,7 @@ jobs:
       #     curl https://awscli.amazonaws.com/AWSCLIV2.pkg -o AWSCLIV2.pkg
       #     sudo installer -pkg AWSCLIV2.pkg -target
       #     aws --version
-      
+
       - name: Configure AWS CREDENTIALS FILE
         env:
           CREDENTIALS_FILE_CONTENTS : ${{ secrets.AWS_CREDENTIALS_FILE_CONTENTS }}
@@ -37,18 +41,6 @@ jobs:
           echo "$CREDENTIALS_FILE_CONTENTS" > ~/.aws/credentials
           echo "$CREDENTIALS_FILE_CONTENTS" > ~/.aws/credentials.copy
         # Copy file above is for testing purposes, refer to tests/mentaws::test_add_profiles
-      
-      # - name: Set up Python 3.6
-      #   uses: actions/setup-python@v2
-      #   with:
-      #     python-version: 3.6
-
-      # # version 1.2
-      # - name: Install Poetry
-      #   uses: dschep/install-poetry-action@db2e37f48d1b1cd1491c4590338ebc7699adb425
-
-      # - name: Install Dependencies
-      #   run: poetry install
       
       - name: Get Path
         run: poetry env info --path
