--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6]
-        os: [macos-latest, windows-latest]
+        os: [windows-latest]  # [macos-latest, windows-latest]
         poetry-version: [1.0.5]
     runs-on: ${{ matrix.os }}
     steps:
@@ -28,8 +28,8 @@ jobs:
         if: contains(matrix.os, 'windows')
         shell: cmd
         run: |
-          echo "%USERPROFILE%"
-          echo "%USERPROFILE%\.aws\credentials"
+          echo mkdir "%USERPROFILE%\.aws\credentials"
+          mkdir "%USERPROFILE%\.aws\credentials"
           echo "%CREDENTIALS_FILE_CONTENTS%" > "%USERPROFILE%\.aws\credentials"
           echo "%CREDENTIALS_FILE_CONTENTS%" > "%USERPROFILE%\.aws\credentials.copy"
           echo "SETUP on Windows complete %USERPROFILE%\.aws\credentials"
@@ -45,10 +45,10 @@ jobs:
       #     echo "SETUP on macOS complete"
       #   # The .copy file above is for testing purposes, refer to tests/mentaws::test_add_profiles
       
-      # - name: Poetry install
-      #   run: poetry install
+      - name: Poetry install
+        run: poetry install
       
-      # - name: Poetry test
-      #   run : poetry run pytest -s -x .
+      - name: Poetry test
+        run : poetry run pytest -s -x .
 
 
