--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6]
-        os: [windows-latest]  # [macos-latest, windows-latest]
+        os: [windows-latest, macos-latest]  # [macos-latest, windows-latest]
         poetry-version: [1.0.5]
     runs-on: ${{ matrix.os }}
     steps:
@@ -33,19 +33,23 @@ jobs:
         run: |
           echo mkdir "%USERPROFILE%\.aws"
           mkdir "%USERPROFILE%\.aws"
+          echo "%AWS_CREDENTIALS_FILE_CONTENTS%" > "%USERPROFILE%\.aws\credentials"
+          echo "%AWS_CREDENTIALS_FILE_CONTENTS%" > "%USERPROFILE%\.aws\credentials.copy"
           echo "SETUP on Windows complete %USERPROFILE%\.aws\credentials"
-          poetry run pytest -s -x .
 
-      # - name: Configure AWS CREDENTIALS FILE (macOS)
-      #   env:
-      #     CREDENTIALS_FILE_CONTENTS : ${{ secrets.AWS_CREDENTIALS_FILE_CONTENTS }}
-      #   if: contains(matrix.os, 'macOS')
-      #   run: |
-      #     mkdir ~/.aws
-      #     echo "$CREDENTIALS_FILE_CONTENTS" > ~/.aws/credentials
-      #     echo "$CREDENTIALS_FILE_CONTENTS" > ~/.aws/credentials.copy
-      #     echo "SETUP on macOS complete"
-      #   # The .copy file above is for testing purposes, refer to tests/mentaws::test_add_profiles
+      - name: Configure AWS CREDENTIALS FILE (macOS)
+        env:
+          CREDENTIALS_FILE_CONTENTS : ${{ secrets.AWS_CREDENTIALS_FILE_CONTENTS }}
+        if: contains(matrix.os, 'macOS')
+        run: |
+          mkdir ~/.aws
+          echo "$CREDENTIALS_FILE_CONTENTS" > ~/.aws/credentials
+          echo "$CREDENTIALS_FILE_CONTENTS" > ~/.aws/credentials.copy
+          echo "SETUP on macOS complete"
+      
+      - name: Poetry test
+        run: poetry run pytest .
+
 
 
 
