--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
           mkdir "%USERPROFILE%\.aws"
           dir "%USERPROFILE%"
           echo "%CREDENTIALS_FILE_CONTENTS%" > "%USERPROFILE%\.aws\credentials"
-          echo "hello" > "%USERPROFILE%\.aws\credentials"
+          echo "hello" > "%USERPROFILE%\.aws\credentials_copy"
           dir "%USERPROFILE%\.aws"
           echo "SETUP on Windows complete %USERPROFILE%\.aws\credentials"
 
