added mac-os bigSur, ubuntu-latest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.6]
-        os: [macos-latest, windows-latest]
+        python-version: [3.6, 3.7, 3.8]
+        os: [macos-latest, windows-latest, ubuntu-latest, macos-11.0]
         poetry-version: [1.0.5]
     runs-on: ${{ matrix.os }}
     steps:
