--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        os: [macos-latest, windows-latest, ubuntu-latest, macos-11.0]
+        os: [macOS-latest, windows-latest, ubuntu-latest, macOS-11.0]
         poetry-version: [1.0.5]
     runs-on: ${{ matrix.os }}
     steps:
@@ -25,14 +25,14 @@ jobs:
       - name: Poetry install
         run: poetry install
 
-      - name: Configure AWS CREDENTIALS Dir (Windows)
-        if: contains(matrix.os, 'windows')
-        shell: cmd
-        run: mkdir "%USERPROFILE%\.aws"
-      
-      - name: Configure AWS CREDENTIALS FILE (macOS)
-        if: contains(matrix.os, 'macOS')
-        run: mkdir ~/.aws
+#      - name: Configure AWS CREDENTIALS Dir (Windows)
+#        if: contains(matrix.os, 'windows')
+#        shell: cmd
+#        run: mkdir "%USERPROFILE%\.aws"
+#
+#      - name: Configure AWS CREDENTIALS FILE (macOS & Linux)
+#        if: contains(matrix.os, 'macOS') || contains(matrix.os, 'ubuntu')
+#        run: mkdir ~/.aws
       
       - name: Poetry test
         env:
