--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ boto3 = "^1.14.20"
 cryptography = "^2.9.2"
 PyYAML = "^5.3.1"
 keyring = "^21.4.0"
+pytest-cov = "^2.10.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
