--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "mentaws"
-version = "0.4.4"
-description = "Temporary AWS credentials"
+version = "0.5.0"
+description = "moMENTary AWS credentials"
 authors = ["keithrozario <keith@keithrozario.com>"]
 
 [tool.poetry.dependencies]
