--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         if: contains(matrix.os, 'ubuntu')
         run: |
           poetry add secretstorage
-          apt-get install libdbus-1-dev libdbus-glib-1-dev
+          sudo apt-get install libdbus-1-dev libdbus-glib-1-dev
           poetry add dbus-python
 
       - name: Poetry test
