--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,12 +25,12 @@ jobs:
       - name: Poetry install
         run: poetry install
 
-      - name: Build Ubuntu packages
-        if: contains(matrix.os, 'ubuntu')
-        run: |
-          poetry add secretstorage
-          sudo apt-get install libdbus-1-dev libdbus-glib-1-dev
-          poetry add dbus-python
+      # - name: Build Ubuntu packages
+      #   if: contains(matrix.os, 'ubuntu')
+      #   run: |
+      #     poetry add secretstorage
+      #     sudo apt-get install libdbus-1-dev libdbus-glib-1-dev
+      #     poetry add dbus-python
 
       - name: Poetry test
         env:
