--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,11 @@ jobs:
       - name: Poetry test
         env:
           CREDENTIALS_FILE_CONTENTS : ${{ secrets.AWS_CREDENTIALS_FILE_CONTENTS }}
-        run: poetry run pytest -s -x .
+        working-directory: ./tests
+        run: poetry run pytest --cov ../mentaws tests/ --cov-report term-missing -vv
 
-
-
+      - name: Update Test Coverage
+        if: github.ref == 'refs/heads/release'  # only on the feature branch do we publish code coverage stats
+        working-directory: ./tests
+        run: poetry run coveralls
 
