--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,14 +31,17 @@ click = "^7.1.2"
 pytest = "^4.6"
 black = "^20.8b1"
 pytest-cov = "^2.10.1"
+coveralls = "^2.2.0"
+python-coveralls = "^2.9.3"
 
 [tool.poetry.scripts]
 mentaws = "mentaws.main:main"
 mts = "mentaws.main:main"
 
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/keithrozario/lambda_cache/issues"
+"Docs" = "https://lambda-cache.readthedocs.io"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-[tool.poetry.urls]
-"Bug Tracker" = "https://github.com/keithrozario/mentaws/issues"
