--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Update Test Coverage
         if: github.ref == 'refs/heads/release'  # only on the feature branch do we publish code coverage stats
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }} 
         working-directory: ./tests
         run: poetry run coveralls
 
