--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,13 +26,14 @@ cryptography = "^2.9.2"
 PyYAML = "^5.3.1"
 keyring = "^21.4.0"
 click = "^7.1.2"
+python-coveralls = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
 black = "^20.8b1"
 pytest-cov = "^2.10.1"
 coveralls = "^2.2.0"
-python-coveralls = "^2.9.3"
+coverage = "^5.3"
 
 [tool.poetry.scripts]
 mentaws = "mentaws.main:main"
