--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ coveralls = "^1.11.1"
 pytest = "^4.6"
 black = "^20.8b1"
 pytest-cov = "^2.10.1"
-coverage = "^5.0.4"
+coverage = "<5"
 python-coveralls = "^2.9.3"
 
 [tool.poetry.scripts]
