--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mentaws"
-version = "0.6.0"
+version = "0.6.1"
 description = "moMENTary AWS credentials"
 authors = ["keithrozario <keith@keithrozario.com>"]
 repository = "https://github.com/keithrozario/mentaws"
@@ -26,19 +26,23 @@ cryptography = "^2.9.2"
 PyYAML = "^5.3.1"
 keyring = "^21.4.0"
 click = "^7.1.2"
+python-coveralls = "^2.9.3"
+coveralls = "^1.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
 black = "^20.8b1"
 pytest-cov = "^2.10.1"
+coverage = "<5"
+python-coveralls = "^2.9.3"
 
 [tool.poetry.scripts]
 mentaws = "mentaws.main:main"
 mts = "mentaws.main:main"
 
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/keithrozario/mentaws/issues"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-[tool.poetry.urls]
-"Bug Tracker" = "https://github.com/keithrozario/mentaws/issues"
